various minor fixes and additions
Former-commit-id: 834cab42348936d455ef4c8dfa32abbf830a33e4

--- a/wackyTech.html
+++ b/wackyTech.html
@@ -34,6 +34,7 @@ MathJax.Hub.Config({
 				<li>"The numbers" | debatable data | <span style="color:orange">raw idea</span></li>
 				<li>C3=0 manifolds | pure two-body zero energy transfers | <span style="color:red">Magic</span></li>
 				<li><a href="#mercuryIsGoodForYou">Mercury is good for you</a>| Density impulse | <span style="color:orange">raw idea</span></li>
+        <li>Neutron poison balancing in a nuclear thermal engine</li>
 			</ul>
       <p>Technologies Kim thinks about</p>
       <ul>
