timeline correction to water fuel for nuke shuttle
Former-commit-id: afbf0adc157f961098e5c6dc98854d893d637216 [formerly dcc5899e41e860aa2a452f1a003bf231aa518e2d]
Former-commit-id: 1229e5e8dfcd4ae0f50067e0ac21ac939a417e4d

--- a/timeline.html
+++ b/timeline.html
@@ -60,7 +60,7 @@ This is a part of the site that is expanded and detailed as the project develops
   <ul>
    <li>Flies between the lunar surface and lunar orbit</li>
    <li>May be practical to connect its engines to turbine generators when not flying</li>
-   <li>Uses an <a href="http://www.projectrho.com/public_html/rocket/enginelist.php#lantr">oxygen 'afterburner'</a> to increase thrust during launch and landing</li>
+   <li>Uses water for a higher-thrust fuel, which is more efficient, once the tether is in place, because most of the fuel is for launch and landing, when high thrust is the priority. Thus the base does not need to split water into hydrogen and oxygen, or to store cryogenic hydrogen.</li>
    <li>A barrier needs to be between the shuttle and human habs so that people aren't exposed to its radiation when working outside</li>
    <li>To design the model, better data is needed on radiation shield design. </li>
   </ul>
@@ -314,6 +314,7 @@ This is a part of the site that is expanded and detailed as the project develops
   <article class="column" id="EarthTetherComplete">
   </article>
   <article class="column">
+    <h5></h5>
   </article>
   <article class="column" id="RP6and7">
     <h5>Residence Program Rounds 6 and 7</h5>
