timeline content, tether corrections
Former-commit-id: bee0b24496ae4d1eae503394252f49d80faff156 [formerly 12e7ca249496750a4ca5059ae2f468773d0ad336]
Former-commit-id: 0418e05b09b541e8b828d1559342f5539a94abac

--- a/timeline.html
+++ b/timeline.html
@@ -54,7 +54,7 @@ This is a part of the site that is expanded and detailed as the project develops
    <li>This will require on-orbit assembly due to the size of the solar panels and the scale of the bag that will enclose the asteroid. It can probably be done in 2 pieces.
    </li>
    <li>To work well its solar panels need to generate roughly 1 MW of power, and it needs an array of <a href="https://ntrs.nasa.gov/archive/nasa/casi.ntrs.nasa.gov/20040139476.pdf">HiPEP ion drives</a>, The ISS panels generate about 100 KW, so 10 times that much. One might hope to get 15 N of thrust from such a system. </li>
-   <li>The ship is reused to retrieve a series of asteroids over time. It may need some refurbishment but should be able to get the 5 asteroids for the complete lunar tether system, and then a bunch of asteroids for mining.</li>
+   <li>The ship is reused to retrieve a series of asteroids over time. It will need  refurbishment and upgrading over time to get the 5 asteroids for the complete lunar tether system, and then the Earth tether asteroid.</li>
  </ul>
   <h5><a href="machines2.html#nuclearShuttles">Nuclear Thermal Shuttles</a></h5>
   <ul>
@@ -114,9 +114,9 @@ This is a part of the site that is expanded and detailed as the project develops
    <li>An asteroid massing 7500 tons is brought into high polar orbit, 5000 km above the surface. Surveys of Near Earth Asteroids will be much more complete by then, so it is reasonable to expect a carbonaceous asteroid that is suitable will have been found and collected. Its content of carbon and metal would be its most valuable contribution, as water is being mined from the lunar pole at less expense. But its hydrated minerals are still of value.</li>
    <li>Zylon cables, construction equipment, and a test cable car are brought from Earth to the asteroid. Some small scale tests will already have been done in preparation. Now further testing and experimentation is done to ensure a robust design.</li>
    <li>A tether begins to be extended from the asteroid towards the surface. The first increment is only a few kilometers, then increments of a hundred kilometers are added. The platform at the foot, the procedure by which the nuclear shuttle meets it and is grappled, oscillation control on the tether, the cable car, and cable car propulsion are all thoroughly tested at this scale and further refined.</li>
-   <li>The tether is extended in increments of 1000 km until it reaches an altitude of 50 km above the surface. The lower tether is then complete.</li>
-   <li>The cable car may receive power beamed from the asteroid's solar panels, or may have an onboard nuclear generator.</li>
-   <li>Once at its full length, the nuclear shuttle will only need to use 1/4th of the delta V needed to reach and return from lunar orbit to reach the platform of the tether foot and return. It will need that same 1/4th of the normal delta V to go anywhere on the Moon by grappling the platform and hanging off it until it is over its destination, and to return to base the same way. The anchor has an array of HiPEP engines to correct orbit perturbations caused by momentum changes when ships and payloads come and go.</li>
+   <li>The tether is extended in increments of 1000 km until it reaches an altitude of 20 km above the surface. The lower tether is then complete.</li>
+   <li>The cable cars may receive power beamed from the asteroid's solar panels, or may have onboard nuclear generators.</li>
+   <li>Once at its full length, the nuclear shuttle will only need to use 1/5th of the delta V needed to reach and return from lunar orbit to reach the platform of the tether foot and return. It will need that same 1/5th of the normal delta V to go anywhere on the Moon by grappling the platform and hanging off it until it is over its destination, and to return to base the same way. The spaceward tether tip has an array of HiPEP engines to correct orbit perturbations caused by momentum changes when ships and payloads come and go. Short-term, orbital perturbations are compensated for by moving cars that act as counterweights up or down the two tethers. In case of emergency, if somehow the orbital altitude of the structure has lowered and the foot is at risk of hitting the ground and being dragged across it, a nuclear thermal rocket can fire at the tether tip to quickly raise orbit.</li>
    <li>Conversion of the asteroid to a space station begins. Early steps in that direction were carried out during tether construction, replacing payloads of asteroid material with simple vessels and beams made of fused regolith. The solar panels and engines of the retrieval ship are installed on the asteroid for use in orbital maintenance.</li>
    <li>The upper tether, extending outwards deeper into space, is also installed and given its own cable car and platform at the tip. This will proceed much faster as the dynamics of the system and good designs are now known.</li>
    <li>With this process completed, it takes about 2 km/s less delta V to get something to the Moon from Earth, and 3 km/s less to get something back.</li>
@@ -219,7 +219,7 @@ This is a part of the site that is expanded and detailed as the project develops
     This is going to be the real transport hub for the Moon, together with Cernan's Promise, and later Lalande City. It develops into a colony in its own right. It is another carbonaceous asteroid, this time massing 25 metric kilotons. It is placed in a circular orbit 5000 km above the surface, so that it has the same orbital period as the polar tether and they will never be at risk of collision.
     </p>
     <p>
-    A moonward and spaceward tether just like the ones on the polar tether are built outwards from the asteroid. These will be reinforced to take bigger payloads over time, and even to run multiple cars up and down.
+    A moonward and spaceward tether just like the ones on the polar tether are built outwards from the asteroid. These will be reinforced to take bigger payloads over time, and even to run multiple payload cars up and down.
     </p>
   </article>
   <article class="column" id="ExpansionofPeary">
@@ -312,11 +312,33 @@ This is a part of the site that is expanded and detailed as the project develops
 </div>
 <div class="columnSet">
   <article class="column" id="EarthTetherComplete">
+    <h5>Earth Orbital Tether Completed</h5>
+    <p>The lower tether is built up into a set of ribbons able to accomodate several cars travelling up and down. Cars are able to take payloads of up to 50 metric tons, the foot can berth a ship of up to 200 tons. The upper tether is designed to ferry ships docked at the anchor station up the tether until they are released at the right altitude for their destination. This can only be done one at a time, but ships can still be launched that way up to once a day.</p>
+    <p>The anchor station becomes a hub of space activity and starts to grow into a community. It is named Anshar Station after the Sumerian god of the heavens.</p>
+    <p>Because the velocity needed to reach the tether foot is so much lower, rockets that are fully reusable hundreds of times with minimal repair and maintenance become common, and are able to deliver about 4 times as much payload for each ton of fuel as rockets today.</p>
+    <p>The precious metals in the anchor asteroid are alone enough to pay for the cost of building this tether complex - platinum, palladium, and gold especially.</p>
+    <h5>The Moon Hosts a Fleet</h5>
+    <p>Between Anshar lowering the cost to the Moon much further, and a highly automated construction industry on the Moon now able to build almost complete ships of several kinds all on its own, soon there is actually a fleet is space. The Moon Agency supervises and regulates this fleet. </p>
   </article>
-  <article class="column">
-    <h5></h5>
+  <article class="column" id="LalandeDome">
+    <h5>Lalande City Begun</h5>
+    <p>A factory that is almost completely automated, using not fixed machinery but robots and rovers able to move anywhere and do everything from prospecting new ore sites to doing quality control on final products, might as well be set the task of doing something that was previously impossible.</p>
+    <p>So, the first such end-to-end factory to do it all is set to building Lalande City. It starts with the quartz dome over everything, including the towers from floor to dome spaced throughout it, and the the rim structures that connect the dome to the ground and house all sorts of living space and infrastructure. The mines sunk into the central mountains and the lower crater walls, now extensive, are incorporated into the city. For the most part, they are now abandoned, or active mining is so far from the actual crater that it can be isolated from the city and connected to the surrounding factories by other routes. </p>
+    <p>Once this work is done, as with the interiors of earlier large spaces, the city is filled in slowly by the people living there. This work they do themselves, by choice, so they can enjoy it and create true beauty.</p>
+    <h5>Anshar Station</h5>
+    <p></p>
   </article>
   <article class="column" id="RP6and7">
     <h5>Residence Program Rounds 6 and 7</h5>
+  </article>
+</div>
+<div class="columnSet">
+  <article class="spanAll">
+    <h1>The Space Boom</h1>
+    <p> If not already obvious from some of the grand plans in the previous section, this is the beginning of the Space Boom. Many missions that were previously highly impractical or impossible are now pursued. The possibilities beyond this point are so varied and vast it is hard to make any predictions, other than that everything will change. The scope that Moonwards can cover right now is too small to consider the many projects that would be started at this point. What is here can be considered as a sampling.</p>
+    <p>An example for Earth orbit: it makes complete sense that a number of additional tether complexes in LEO would shortly be erected, of even greater capacity. Satellite orbits and space debris are now controlled such that there is little collision concern. Several tether complexes are placed in polar orbits, allowing almost the entirety of common satellite work to be done on the tether stations instead - communications, data transmission, broadcasting, earth observation, mapping services. So, the tether feet are lowered almost to the Karman line, 100 km above the Earth's surface. </p>
+    <p>An example for deep space: automated ships start to fly out to Saturn's rings, where they capture chunks of ice from the rings in giant bags. The water ice is delivered to the Moon and the space stations, where it is mostly used to create permanent infrastructure: artificial lakes and rivers, transparent shielding over large areas. These ships can bring back 50 to 100 kilotons of pure water ice on a single run, and a fleet of them simply shuttle back and forth continuously</p>
+    <p>An example for cis-lunar space: an O'Neill cylinder is now practical, an asteroid of appropriate size and composition is brought to L5 and work begins.</p>
+    <p>Cloud cities above Venus? Colonies on Mars and its moons? Colonies on the terminator of Mercury? On Ceres? On Callisto? Sure! Not all at once, it depends what interests people most, but any of these plans is now feasible. </p>
   </article>
 </div>
