--- a/timeline.html
+++ b/timeline.html
@@ -285,7 +285,7 @@ This is a part of the site that is expanded and detailed as the project develops
     <p>Total population at the completion of these events is 3100 people - 3000 from the RP, and 100 from the space-faring nations who continue to administer the colonies. The Moon Agency is created at this point, and staff is extended beyond the existing management staff from the space agencies to include some of the residents. The MA oversees colony activity beyond that point, following the dictates of a treaty created to establish its policies.</p>
     <p>Some programming broadcast from the colonies becomes quite popular on Earth. Certain sports have evolved into something unique and entertaining, and there are now leagues of small competing teams, and scheduled matches for several sports that include annual championships. A sort of variety talk show has also become very popular. An annual arts event gets considerable attention and includes virtual participation by people on Earth. Many of the video blogs of different resident groups have large loyal followings. The lunar population includes a number of people who have become international celebrities, and even more who are major celebrities in their home countries.</p>
     <h5>The Moon Fund and Opening of the Economy</h5>
-    <p>The lunar economy nears break even during these events. The Moon Fund is created and all lunar finances from existing industry then go through it. How profits from that are distributed, once they exist, becomes a very delicate matter that has to be carefully negotiated. Most industries are privatized in stages. Transport infrastructure continues to be held in common and governed by the Moon Agency.</p>
+    <p>The lunar economy nears break even during these events. The Moon Fund is created and all lunar finances from existing industry then go through it. How profits from that are distributed, once they exist, becomes a very delicate matter that has to be carefully negotiated. Most industries are privatized in stages. Transport and telecommunications infrastructure continues to be held in common and governed by the Moon Agency.</p>
     <p>The residents' needs have been and continue to be covered by the colony administration. All colony resources are essentially held in common, as far as providing for the people there goes. As time goes on, there are increasing numbers of deals between residents for goods and services that are extras. There is barter, and sometimes exchanges of funds between Earth-side accounts, which is then used to have extra luxury items delivered. (Residents also have a standard allotment of payload mass and money for getting non-essentials from Earth. It is usually used for favorite foods, extra clothing, and small furnishings.) Towards the end of this period, the freedom of residents to have contracts with entities on Earth and be paid increases, and the wealth of some residents suddenly increases as a result.</p>
   </article>
 </div>
@@ -299,6 +299,7 @@ This is a part of the site that is expanded and detailed as the project develops
     <p>Lalande B, at 8 km across and about 30 km north of Lalande, is used for this purpose. All spaceport activity is transferred there over time to provide a buffer zone between it and Lalande City. It also has  an even shape and smooth walls so the coil guns over time can be made longer, and to swivel on a track around the crater rim in order to launch or catch in any direction.</p>
     <h5><a href="machines2.html#EarthTether">Earth Orbital Skyhook Work Begins</a></h5>
     <p>Another jump up in mass moved, the asteroid delivered to be the anchor mass is 200 kilotons of material, largely metallic. Its orbit is circularized at 10,000 km altitude, and a tether is built earthwards to an altitude of 250 km. At first the tether is only sufficient for berthing of a small ship at the foot platform, of 10 tons. </p>
+    <p>This is sufficient for transport of the Round 5 astronauts. Reusable rockets optimized for the delta V needed to reach the foot platform are used to get them there. With these rockets, launch costs do indeed drop to a tiny fraction of what they were before.</p>
   </article>
   <article class="column" id="FillIn">
     <h5>Structures Filled In and Capacity Increased</h5>
@@ -332,13 +333,24 @@ This is a part of the site that is expanded and detailed as the project develops
     <h5>Lalande City Begun</h5>
     <p>A factory that is almost completely automated, using not fixed machinery but robots and rovers able to move anywhere and do everything from prospecting new ore sites to doing quality control on final products, might as well be set the task of doing something that was previously impossible.</p>
     <p>So, the first such end-to-end factory to do it all is set to building Lalande City. It starts with the quartz dome over everything, including the towers from floor to dome spaced throughout it, and the the rim structures that connect the dome to the ground and house all sorts of living space and infrastructure. The mines sunk into the central mountains and the lower crater walls, now extensive, are incorporated into the city. For the most part, they are now abandoned, or active mining is so far from the actual crater that it can be isolated from the city and connected to the surrounding factories by other routes. </p>
-    <p>Once this work is done, as with the interiors of earlier large spaces, the city is filled in slowly by the people living there. This work they do themselves, by choice, so they can enjoy it and create true beauty.</p>
+    <p>Robots and automation have become so able that the robotic portion of construction takes only a decade. The robots build the power plants and factories needed to build all the other robots needed to build the factories needed to fabricate all the fused quartz dome sections, all the composite basalt beams and fittings, the basalt cable, and all the myriad other things. They build the robots that assemble the dome support structures and raise the towers, starting from the center mountains and moving outwards, until the towers are complete and a latticework of beams and cables runs between them and down their cores. They make the rim structures the dome edges sit on, and the anchors for the dome cables around the rim and under each tower. They place the quartz segments, seal the joints, and fuse the crater floor into solid stone. They put in endless plumbing, wiring, lighting, heat pumps, fiberoptics, comms systems, sensors, airlocks, recycling systems.</p>
+    <p>They lay down regolith enriched into fertile soil over almost the entire crater interior, creating terraces and stabilized slopes. They fill the dome with air, fill ponds and artificial creeks with water, moisten the soil, and plant an initial crop of grasses everywhere. They test everything carefully. Then the doors are opened, and the robots have to go find something else to do. The factories they made to do this become part of the construction industry surrounding the crater, the power plants provide the initial power for the city and expanded industry.</p>
+    <p>The city isn't finished until the end of Round 7. When it is opened, many of the RP residents move out into it, and when private citizen residents begin to arrive, many settle there.</p>
     <h5>Anshar Station</h5>
-    <p></p>
+    <p>Microgravity and vacuum manufacturing takes off. Delivery of the output to Earth is cheap enough using the skyhook and automated reentry vehicles for greatly expanded development of the method. Anshar fills with research labs and small specialized factories. The satellite launch and servicing industry is also centered there. Large hotels and recreational facilities spring up. </p>
   </article>
   <article class="column" id="RP6and7">
     <h5>Residence Program Rounds 6 and 7</h5>
-    <p></p>
+    <p>In anticipation of the day when the public can buy residence in Cernan's Promise, clusters of homes and related facilities are scattered through the full volume of the existing buildings, so that the RP residents aren't isolated from future residents. The 19,200 people in the final RP rounds fill in the lower reaches of the upper gallery, all the lower gallery, and the mega-atrium with clumps of homes. It is still more efficient for groups of people to share facilities with plumbing, meaning kitchens, baths, and washing areas. Groups of 30 to 50 people share each such area, and this has already become a cultural preference. Such groups become identified as micro-communities and work almost like tribes.</p>
+    <p>Arriving residents continue to be officially employed by the Moon Agency, but only part time in most cases, usually one or two days a week on average. MA duties for residents narrow to community oriented tasks - developing and raising crops, expanding the set of organisms in the local ecosystem, maintenance and repairs, waste processing, construction of shared facilities for the general population, planning and administration, medical services, monitoring of safety procedures and standards compliance, ongoing research such as medical testing, and everything to do with transport and telecommunications.</p>
+    <p>Many incoming residents now have arrangements with one of the private companies that have taken over mining, manufacturing, and commercial research, or with the foundations created to administer pure science research facilities such as the telescopes. (Those foundations are in turn administered by the MA, but are mostly independent.) Many others come with their own plans. A large proportion of new residents are now not sponsored by countries, but by universities, foundations, religious institutions, or professional associations. Some of the foundations were specifically created for the purpose of sponsoring RP astronauts, and send them to fulfill a specific agenda.</p>
+    <p>For instance, some of them acquire permission to erect their own transmitters and become private broadcasters. Some come to play the new sports that have become so popular, turning them semi-pro. Some come to start a new company or to conduct private research. Some are artists or thinkers who use the Moon as a platform to create works of art or spread a message. </p>
+    <p>A local virtual currency is created. People have accounts that are files containing records of transactions and a tally of credits, in a distributed system that uses the majority of the computers on the colony to maintain so many encrypted copies of the accounts that it is impossible to falsify transactions (similar to Bitcoin). Sometimes the system is used for creation and witnessing of contracts, from simple bets and barter exchanges to swapping homes. Nothing under the auspices of the MA uses this system, however. As always, the needs of life are free. </p>
+    <p>There is enough need for conflict resolution that there are a small number of people who are sort of police, and something that is sort of like a court. The court handles contract disputes involving the private companies, and increasingly also the contracts created between residents. Occasionally it also handles disturbances such as physical fights, harassment cases, property damage, or theft. </p>
+    <p> Contract cases are a simple matter of interpreting the contract, and if it was not clear, the matter goes to mediation, and if that does not work, the contract is cancelled and the court rules on any distribution or exchange of property or funds involved. The court doesn't rule on how things are intrepreted, only on whether something is or isn't clear and thus must go to mediation.</p>
+    <p>Disturbances are always handled by mediation. The involvement of people close to the those involved in the disturbance is heavy. The court provides mediation but the responsibility for resolving problems is placed on the micro-communities that have formed around shared kitchens, baths, and gardens, or a shared activity such as coilgun operation or ecosystem development. In the very rare case of a truly violent act, the resident is expelled from the colony and returns to Earth. This happens only maybe once or twice during the entire Resident Program.</p>
+    <p>All the residents are highly conditioned to a system where you labor for the common good, and receive the needs of life for free. They have lived that way for at least a couple of decades before the Residence Program ends. In anticipation of the arrival of residents after that point who go through a much more basic selection process, and in response to dynamics created by the growth of private enterprise, the residents of Cernan's Promise create a constitution. It is not recognized by Earth governments, but all the residents swear to uphold it, and the MA takes it very seriously. </p>
+    <p>That constitution states that all the things they have become accustomed to having for free shall always be free for Moon residents - food, shelter, medical services, electricity, telecommunications, public transport, basic clothing and furnishings. That each micro-community of those who share kitchen and bath shall be responsible for seeing that all their members receive these things in a way sufficient for health, and each such micro-community shall perform its share of duties for common good that make it possible for these things to be free. That if there is a disagreement about this, mediation may be sought, but members may not be expelled from a community. Members may only switch micro-communities by mutual agreement. That the contract system that has grown out of the virtual currency shall be the authority for the creation and monitoring of interpersonal commitments that merit a contract - including such things as marriage. That the virtual currency shall be the Moon's only currency, and that it may not be used to charge interest. </p>
   </article>
 </div>
 <div class="columnSet">
@@ -349,5 +361,45 @@ This is a part of the site that is expanded and detailed as the project develops
     <p>An example for deep space: automated ships start to fly out to Saturn's rings, where they capture chunks of ice from the rings in giant bags. The water ice is delivered to the Moon and the space stations, where it is mostly used to create permanent infrastructure: artificial lakes and rivers, transparent shielding over large areas. These ships can bring back 50 to 100 kilotons of pure water ice on a single run, and a fleet of them simply shuttle back and forth continuously</p>
     <p>An example for cis-lunar space: an O'Neill cylinder is now practical, an asteroid of appropriate size and composition is brought to L5 and work begins.</p>
     <p>Cloud cities above Venus? Colonies on Mars and its moons? Colonies on the terminator of Mercury? On Ceres? On Callisto? Sure! Not all at once, it depends what interests people most, but any of these plans is now feasible. </p>
+  </article>
+</div>
+<div class="columnSet">
+  <article class="column" id="KindsofShips">
+    <h2>Transport cont'd</h2>
+    <h5>Lots and lots of ships and launchers</h5>
+    <p>Lalande factories now make all the components for complete ships which are assembled at the  Gagarin Shipyard. There are many kinds, which may be for passengers or automated, specialized for a variety of environments such as Jupiter's radiation or Mercury's intense sun, and a wide variety of tasks, on a wide range of scales:</p>
+    <ul>
+      <li>Low-thrust ships
+        <ul>
+          <li>Solar sail</li>
+          <li>Nuclear electric powered</li>
+          <li>Solar electric powered</li>
+          <li>Using ion drives</li>
+          <li>Or coil guns</li>
+          <li>Or experimental drives that show promise: Neumann drives, Em drives, or Mach drives</li>
+        </ul>
+      </li>
+      <li>High-thrust ships
+        <ul>
+          <li>Nuclear thermal</li>
+          <li>Liquid chemical rockets</li>
+          <li>Solid chemical rockets</li>
+        </ul>
+        <li>Launching machines
+          <ul>
+            <li>Skyhooks</li>
+            <li>Sling launchers</li>
+            <li>Coil Guns</li>
+          </ul>
+        </li>
+      </li>
+    </ul>
+  </article>
+  <article class="column" id="CityFinished">
+    <h2>Colony Development cont'd</h2>
+    <h5>Lalande City Complete</h5>
+
+  </article>
+  <article class="column" id="TrueSociety">
   </article>
 </div>
