--- a/wackyTech.html
+++ b/wackyTech.html
@@ -39,7 +39,8 @@ MathJax.Hub.Config({
       <p>Technologies Kim thinks about</p>
       <ul>
         <li>How the nuclear shuttles could be hooked up to a power grid, especially during initial construction of Cernan's Promise. Should the generators be separate and be hooked up to the reactor while the shuttle is parked?</li>
-</ul>
+        <li>Refrigeration - If you cut a void into the ground, painted the inside of it black, put a container on posts inside it covered with aluminum foil and kept it in shade, it would stay pretty cold. If you could create a thick stone slab for the floor, it would have considerable thermal inertia. Or put a container inside that container, and fill the void between with gravel. Or cut channels in the ground - works a lot better where it is all rock - then carefully creat undercuts between the channels until you essentially again have a box on posts surrounded by a void, and then partly hollow it out. At any rate, many levels of refrigeration are needed, from pantries to cryogenic hydrogen storage, so it is interesting to think about how much refrigeration could be done passively simply by keeping a sizable mass in shade during the day and uncovering it at night so its heat radiates away. How to lay out those areas so they are accessible from within structures and are most efficient is also an interesting question. </li>
+      </ul>
 		</div>
 		</div>
 	</section>
