rename Peary to Inukshuk, add to timeline
Former-commit-id: b386b3e8b7c15a51d02fb34736d5baf68b8ca8d0 [formerly 535a50096b5935d5b5933595f9df98e31c3fa352]
Former-commit-id: 6c683da75fa40f82b8fa0c494719932135f9b219

--- a/timeline.html
+++ b/timeline.html
@@ -78,7 +78,7 @@ This is a part of the site that is expanded and detailed as the project develops
   <h5><a href="machines.html#robots">Robot and Rover Test Missions</a></h5>
 <p>These can't start until the pod ship and shuttle are running and have delivered their first payload to the site of the future base. The goal would be to have robotic machinery on the surface capable of performing the complex work of construction and volatile extraction by the time the asteroid for the first skyhook arrives in orbit.</p>
   <ul>
-   <li>After the pod ship has deployed the nuclear shuttle, and the two have taken the first deliveries of equipment and supplies to the base site on the rim of Peary crater, a crew is delivered to orbit by a conventional rocket. Their capsule is picked up by the nuclear shuttle and landed at the base site.
+   <li>After the pod ship has deployed the nuclear shuttle, and the two have taken the first deliveries of equipment and supplies to the base site on the west rim of Whipple crater, a crew is delivered to orbit by a conventional rocket. Their capsule is picked up by the nuclear shuttle and landed at the base site.
   </li>
   <li>Remotely operated equipment has already excavated a trench, placed an inflatable hab for the crew in it, and covered it over with enough regolith to form a good radiation barrier. If there were problems with this process, the human crew completes it. Other simple processes such as basic scouting and solar panel setup are done. </li>
   <li>Also the surface regolith is fused using simple Fresnel lenses. The thin layer created will tend to break up and shift, but by driving a grid of fused regolith stakes into the ground before passing the lens over an area, the melted surface fuses with the stakes into one piece. The cracking then doesn't lead to shifting. Thickening the fused layer by spreading more regolith overtop and heating it can also be done.
@@ -97,6 +97,8 @@ This is a part of the site that is expanded and detailed as the project develops
   <li>Note also that excavation is done in two steps that are simple and very effective. First, by boring a grid of holes using a sun gun, a piece whose model in in process right now. It is based very closely on the work of <a href="http://www.psicorp.com/pdf/library/VG09-193.pdf">Nakamura and Smith</a> through Physical Sciences Inc. Second, by laying micro-charges in those holes and detonating them to <a href="https://books.google.com.mx/books?id=rOg6B38bunIC&pg=PA235&lpg=PA235&dq=explosives+regolith&source=bl&ots=0YL6xrfyup&sig=d_DOCyBJTkkGCfuNIe4VsSQ0esY&hl=en&sa=X&ved=0ahUKEwjhl-nZkazSAhUGllQKHRoDDUgQ6AEIIDAB#v=onepage&q=explosives%20regolith&f=false">loosen the soil</a>. Further depth is achieved by repeating this process.
   </li>
   </ul>
+  <h5>Naming of Inukshuk Base</h5>
+  <p>During testing of the construction rovers and robots, the engineers remotely operating the equiment decide to check their abilities by building an Inukshuk. It takes some work but comes out rather well. They leave it and name the base after it, as it is at the north pole, and Inukshuks are a tradition of Arctic peoples.</p>
  </article>
  <article class="column" id="InternationalSpaceAgency">
   <h5>Creation of an international space agency body</h5>
@@ -127,12 +129,12 @@ This is a part of the site that is expanded and detailed as the project develops
 <h5>Reusable Rockets</h5>
 <p>The launch rates needed to accomplish the missions after Resident Program Round 2 require one of two things: much higher public enthusiasm for space, or much cheaper launch costs. Rocket stages that are used many times with modest refurbishment in between can reduce launch costs to a fraction of current costs. Roughly, a reusable first stage like SpaceX currently targets, that can be reliably and cheaply reused 20 times, might drop costs to half what they are now. A reusable second stage with the same properties might halve that again, maybe more if high production rates also decrease costs. </p>
 <p>Work by Blue Origin and the various more established rocket companies on reusability indicates there is high likelihood of success on this. SpaceX has had enough success that the whole industry is moving in that direction, because if those Falcon 9 first stages continue to deliver, they will be left in the dust if they don't have competing products.</p>
-<p>The launches needed for Resident Program Rounds 1 and 2 can be done at the best prices currently charged. Plans would not proceed unless Peary Base was producing enough water to provide for all the residents and the needs of the base, and to fuel the shuttle and the pod ship. Thus the tonnage of supplies that would have to be delivered would be manageable. A healthy profit margin on those astronauts can be had in this architecture. It is important not to proceed unless the robots have preformed up to spec, but once they do, costs are well controlled.</p>
+<p>The launches needed for Resident Program Rounds 1 and 2 can be done at the best prices currently charged. Plans would not proceed unless Inukshuk Base was producing enough water to provide for all the residents and the needs of the base, and to fuel the shuttle and the pod ship. Thus the tonnage of supplies that would have to be delivered would be manageable. A healthy profit margin on those astronauts can be had in this architecture. It is important not to proceed unless the robots have preformed up to spec, but once they do, costs are well controlled.</p>
 <p>Rounds 3 and 4 would not yield much profit unless launch costs do drop a lot, or other revenue streams are sufficient. That is the time that depends most on public enthusiasm either justifying the cost or creating the profit to support it (through broadcasting and such). </p>
 <p></p>
  </article>
- <article class="column" id="PearyFirstHab">
-  <h5><a href="colonies.html#PearyModels">Completion of the Peary First Hab</a></h5>
+ <article class="column" id="InukshukFirstHab">
+  <h5><a href="colonies.html#InukshukModels">Completion of the Inukshuk First Hab</a></h5>
   <ul>
    <li>The simple boards, beams, panels and such that the MIP stations can produce are sufficient for the bulk of this hab, without needing cables or fiber reinforcement. They can also be used to produce simple furnishings (tables, shelves, doors, chairs, beds ...) and simple implements (jugs, cups, bowls, boxes, shovels, rakes...) </li>
    <li>Everything else must be brought from Earth - the roof membrane, all the machinery and internal systems.</li>
@@ -146,7 +148,7 @@ This is a part of the site that is expanded and detailed as the project develops
   <h5>The Residence Program Begins</h5>
   <p>This is actually the final step of this phase, happening after everything in the other columns is done. However, preparation has been happening for years.</p>
   <ul>
-   <li>The 2nd Peary hab (connected to First Hab) houses the first 200 astronauts of the program. Each is a married couple selected by their countries to go to the Moon permanently - to live out the rest of their lives there. For this privilege, these nations pay $150 million per astronaut. All astronauts must meet stiff criteria agreed upon by all the nations.
+   <li>The 2nd Inukshuk hab (connected to First Hab) houses the first 200 astronauts of the program. Each is a married couple selected by their countries to go to the Moon permanently - to live out the rest of their lives there. For this privilege, these nations pay $150 million per astronaut. All astronauts must meet stiff criteria agreed upon by all the nations.
    <ul>
     <li>They must be a married couple with no children under the age of 18, married at least 10 years, and at least 40 years of age. </li>
     <li>They must be scientists and engineers who can play an active role in studying and developing the Moon. Minimum qualification is that both have at least a bachelor's degree in the sciences or engineering, an one has a more advanced degree or a professional career in a relevant area.</li>
@@ -160,13 +162,13 @@ This is a part of the site that is expanded and detailed as the project develops
    <li>Payment for each spot may be made over 5 years. Today, there are 63 countries in the world with annual national budgets over US$30 billion. Examples of countries at that US$30 billion level include Slovakia, Vietnam, Bangladesh, Morocco, and Luxembourg. By the time the program began there would be a number of others.</li>
    <li>Most of the astronauts would probably be in their mid-40s. They would probably be able to actively participate in colony life for at least 30 years. So, those countries in the list in the point above, for an annual investment of 0.1% of the national budget, would get 2 national superstars on the Moon, that can do way more to inspire national pride and collective interest in science and progress than anything they could do at home, for 30 or 40 years.</li>
   </ul>
-   <p>There will be 7 rounds to this program. The second one goes partly to Peary, and partly to Lalande. The table shows the main aspects of each round.</p>
+   <p>There will be 7 rounds to this program. The second one goes partly to Inukshuk, and partly to Lalande. The table shows the main aspects of each round.</p>
   </article>
 </div>
 <div class="columnSet">
 <article class="spanAll" id="ResidenceProgramTable">
   <h5>The Residence Program - Basic structure and rules</h5>
-  <p>A lot happens during the course of the 7 rounds of the RP. By the time the last round is complete, Lalande and Peary have both reached the full extent shown in Phase 1 of the virtual colonies. Although the residents must qualify, and sign a contract stipulating their duties and obligations, they are free to pursue their own projects as time permits. In later rounds residents will have more free time and greater discretion to pursue activities aside from their official duties on the colony.</p>
+  <p>A lot happens during the course of the 7 rounds of the RP. By the time the last round is complete, Lalande and Inukshuk have both reached the full extent shown in Phase 1 of the virtual colonies. Although the residents must qualify, and sign a contract stipulating their duties and obligations, they are free to pursue their own projects as time permits. In later rounds residents will have more free time and greater discretion to pursue activities aside from their official duties on the colony.</p>
   <table>
   <tr>
   <th>Round</th><th>Spaces</th><th>Price</th><th>Total Revenue</th>
@@ -228,11 +230,11 @@ This is a part of the site that is expanded and detailed as the project develops
     A moonward and spaceward tether just like the ones on the polar skyhook are built outwards from the asteroid. These will be reinforced to take bigger payloads over time, and even to run multiple payload cars up and down.
     </p>
   </article>
-  <article class="column" id="ExpansionofPeary">
+  <article class="column" id="ExpansionofInukshuk">
     <h2>Colony Dev. cont'd</h2>
-    <h5>Expansion of Peary colony</h5>
+    <h5>Expansion of Inukshuk colony</h5>
     <p>
-    The First Hab crew and the astronauts of the RP build more infrastructure at Peary. More robotic equipment arrives from Earth to assist, including prototype 3d printers, reactors for chemical processing, and more advanced robots and rovers.
+    The First Hab crew and the astronauts of the RP build more infrastructure at Inukshuk. More robotic equipment arrives from Earth to assist, including prototype 3d printers, reactors for chemical processing, and more advanced robots and rovers.
     </p>
     <ul>
       <li>Expand ice mining, separating out different ice chemicals</li>
@@ -285,8 +287,8 @@ This is a part of the site that is expanded and detailed as the project develops
       </ol></li>
     </ul>
     <p>Even as all this is being built, production of other products is also occurring. Components for Gagarin Station are made and shipped out. Efforts are made to build more robots using local resources as much as possible. A few satellites are made and placed in orbit. A hull, frame, trusses, bulk regolith shielding, and a large tank of water, are sent to LEO for a space station.</p>
-    <h5>Expansion of Peary Colony</h5>
-    <p>As the population grows, more greenhouses are needed. Ice mining also expands, now being done in a whole set of craters. The ice mining is now almost completely automated. The population at Peary levels off at 1000 people, and everyone else goes to Lalande. </p>
+    <h5>Expansion of Inukshuk Colony</h5>
+    <p>As the population grows, more greenhouses are needed. Ice mining also expands, now being done in a whole set of craters. The ice mining is now almost completely automated. The population at Inukshuk levels off at 1000 people, and everyone else goes to Lalande. </p>
   </article>
   <article class="column" id="RPround2-5">
     <h5>Residence Program rounds 2 through 4</h5>
@@ -311,7 +313,7 @@ This is a part of the site that is expanded and detailed as the project develops
   </article>
   <article class="column" id="FillIn">
     <h5>Structures Filled In and Capacity Increased</h5>
-    <p>While all the structures of Cernan's Promise and Peary now exist, they are only slowly filling up. They were designed to be filled in organically over time, blank canvasses the residents could put their visions on. As the population expands, they build their homes within the galleries. Each couple is given a floorspace, and they are able to use the MIP stations, 3d printers, and other gear to have custom houses made and assembled. As there is no need to install plumbing, wiring, or any weather protection, and the gravity is so low, the design options for the homes are wide open.</p>
+    <p>While all the structures of Cernan's Promise and Inukshuk now exist, they are only slowly filling up. They were designed to be filled in organically over time, blank canvasses the residents could put their visions on. As the population expands, they build their homes within the galleries. Each couple is given a floorspace, and they are able to use the MIP stations, 3d printers, and other gear to have custom houses made and assembled. As there is no need to install plumbing, wiring, or any weather protection, and the gravity is so low, the design options for the homes are wide open.</p>
     <p>Kitchens and all facilities with plumbing continue to be shared, but are distributed much more widely and shared by much smaller groups. Each set of facilities takes on its own feel as the couples that share them come up with pleasing designs for them that express their personalities. They start to feel more like mini-spas and picnic spots. Some couples choose to pool the floorspaces assigned to them to build more elaborate, larger shared houses. Where personalities don't mesh, spaces are exchanged and couples join a different group, sometimes then deciding to alter their houses. The cost of this is minimal as the equipment is there and not fully occupied, and the structures are easily altered.  </p>
     <p>The atriums, Teacup, and the polar greenhouses are filled with plants. The crops yielded incease in quality, quantity, and variety as knowledge is gained and resources increase. The colonies near food independence. Some animals now range free in small numbers within garden areas, including select flying insects, small lizards, and birds. </p>
     <p>The colonists decide upon and build all the shared facilities they need or enjoy. Office space, workshops, gardens, forums, sports arenas, gathering spots, exercise facilities, event areas, chapels and churches, display areas, meeting rooms, and anything else that isn't included in official construction. There are general guidelines for the things the colonists build but they have a lot of leeway. The official things include medical facilities, storage areas for food and all sorts of supplies, administrative offices, and everything to do with transport or industry. These things are built according to official plans and standards.</p>
@@ -335,7 +337,10 @@ This is a part of the site that is expanded and detailed as the project develops
     <p>Because the velocity needed to reach the skyhook foot is so much lower, rockets that are fully reusable hundreds of times with minimal repair and maintenance become common, and are able to deliver about 4 times as much payload for each ton of fuel as rockets today.</p>
     <p>The precious metals in the anchor asteroid are alone enough to pay for the cost of building this skyhook complex - especially platinum, palladium, and gold.</p>
     <h5>The Moon Hosts a Fleet</h5>
-    <p>Between Anshar lowering the cost to the Moon much further, and a highly automated construction industry on the Moon now able to build almost complete ships of several kinds all on its own, soon there is actually a fleet is space. The Moon Agency supervises and regulates this fleet. </p>
+    <p>Between Anshar lowering the cost to the Moon much further, and a highly automated construction industry on the Moon now able to build almost complete ships of several kinds all on its own, soon there is actually a fleet in space. The Moon Agency supervises and regulates this fleet. </p>
+    <h5>Retrieval of Asteroids</h5>
+    <p>These conditions make asteroid retrieval clearly profitable. They can be brought in for extraction of their rare platinum-group metals, or so the iron and nickel in them can be used as construction materials in space, or to form the bulk of a space station, or so the water and carbon in them can be used as radiation shielding and life support for space stations or the lunar colonies.</p>
+    <p>Most of the initial fleet ships are in the asteroid retrieval business.</p>
   </article>
   <article class="column" id="LalandeDome">
     <h5>Lalande City Begun</h5>
@@ -346,6 +351,10 @@ This is a part of the site that is expanded and detailed as the project develops
     <p>The city isn't finished until the end of Round 7. When it is opened, many of the RP residents move out into it, and when private citizen residents begin to arrive, many settle there.</p>
     <h5>Anshar Station</h5>
     <p>Microgravity and vacuum manufacturing takes off. Delivery of the output to Earth is cheap enough using the skyhook and automated reentry vehicles for greatly expanded development of the method. Anshar fills with research labs and small specialized factories. The satellite launch and servicing industry is also centered there. Large hotels and recreational facilities spring up. </p>
+    <p>The asteroid that forms the anchor mass of Anshar is mined for a long time, and its mass replaced as it is taken away to Earth or the Moon mostly with lunar rocks. However there is a market for other kinds of asteroids at Anshar. Several with lots of ice and carbon are sold there, and a few stony ones with a different mix of minerals. </p>
+    <h5>Gagarin Station</h5>
+    <p>The shipyard grows much larger, and some stuff previously done on the surface is now done at the station, using material from asteroids delivered by mining companies as raw materials.</p>
+    <p>An O'Neill cylinder begins to be extended from either side of the top of the station, oriented north-south. This space is designed to be expanded outwards over time. It too is mostly made with material from arriving asteroids.</p>
   </article>
   <article class="column" id="RP6and7">
     <h5>Residence Program Rounds 6 and 7</h5>
